# polarbayes

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: website.yaml
docs/: api.md
polarbayes/: __init__.py  gather.py  spread.py
src/: setup.py
src/polarbayes/: __init__.py  analyze.py
tests/: test_spread.py
