[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PolarBayes"
description = "PolarBayes: a package for tidy data handling of Markov Chain Monte Carlo output using Polars"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Bayesian", "Bayes", "Numpyro", "Polars"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
"polars"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
