[project]
name = "polarbayes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "polars>=1.31.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
]
